# AI-Travel-Planner

./: .gitignore  AI_Travel_Planner_PCD.pcd  AI_Travel_Planner_PRD.md  Makefile  README.md  docker-compose.yml
.github/workflows/: publish-acr.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: expenses.py  itineraries.py  maps.py  routes.py  trips.py
backend/app/core/: config.py
backend/app/schemas/: expense.py  itinerary.py  map.py  trip.py
backend/app/services/: baidu_maps.py  expense_parser.py  itinerary.py  llm.py  prompt.py  supabase_client.py  trip_map.py  trip_repository.py
backend/scripts/: debug_trip_map_flow.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/api/expenses/: route.ts
frontend/app/api/expenses/parse/: route.ts
frontend/app/api/itineraries/: route.ts
frontend/app/api/maps/trips/[tripId]/: route.ts
frontend/app/api/trips/: route.ts
frontend/app/api/trips/[id]/: route.ts
frontend/components/: auth-panel.tsx  home-client.tsx  planner-form.tsx  trip-history.tsx  trip-map.tsx
frontend/lib/: speech-recognition.ts  supabase-client.ts
supabase/: schema.sql
